# Local-Reputation-Agent

./: .gitignore  requirements.txt
agent/: agent_config.py  app.py  db.py  response_agent.py  scheduler.py
sentiment-analysis/: aspects.py  config.py  gemini_agent.py  hinglish_lexicon.py  preprocessing.py  run_analysis.py  sentiment.py  sentiment_rules.py  urgency.py  utils.py
tap-google-reviews/: config.debug.json  config.json.example  config.stealth.json  convert_jsonl_to_csv.py  meltano.yml.example  pyproject.toml  requirements.txt  sample_state.json  scheduler.py
tap-google-reviews/tap_google_reviews/: __init__.py  client.py  schema.py  scraper.py  streams.py  tap.py
tap-google-reviews/tests/: test_discover.py  test_sync.py
